# camera_stiting

./: MySeamFinder.cpp  Projector.cpp (假设 Projector.cpp 存在)  README.md  camera.py  result.avi
Pangolin/src/: pybind_bindings.cpp
Pangolin/test/: test_pangolin.py
calibration/: MY_INTRINSICS.YAML  VISUALIZATION.PY  calibration.py  camera.py  extract_internsics.py  my_intrinsics.yaml
calibration.bak/: calibrate_extrinsics.py  calibration.py  my_intrinsics.yaml
calibration.bak/results/: BAffineLX.txt  FAffineLX.txt  LAffineLX.txt  RAffineLX.txt
calibration/intrinsics_data/: camera_calib.npz  camera_calib_1.npz  camera_calib_2.npz  camera_calib_3.npz  camera_calib_4.npz  camera_calib_5.npz  camera_calib_6.npz
calibration/results/: BLAffineLX.txt  FFAffineLX.txt
docs/: Camera_Intrinsics_Extraction.md  NPZ_File_Opening.md
scripts/: load_npz_camera_params.py  load_npz_params.py
server/: server.py
video_stitching/: CMakeCache.txt  CMakeLists.txt  Consts.h  MTPanoramicCamera  Makefile  MySeamFinder.cpp  MySeamFinder.h  Projector.cpp  Sticher.cpp  Sticher.h  cmake_install.cmake  multiThread.cpp  recording.py
video_stitching.bak/: CameraParameter.h  Consts.h  MTPanoramicCamera  Projector.h  Sticher.cpp  Sticher.h  multiThread.cpp  recording.py
video_stitching.bak/resources/calibration_data/: BRAffineLX.txt
video_stitching/resources/calibration_data/: BBAffineLX.txt  FLAffineLX.txt  FRAffineLX.txt
